# EC2StepShell

./: .gitignore  CHANGELOG.txt  LICENCE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
src/: __init__.py  ec2stepshell.py
src/core/: ReverseShell.py
src/ec2stepshell/: __init__.py  __main__.py
src/ec2stepshell/core/: ReverseShell.py
src/ec2stepshell/ssm/: SsmWrapper.py
src/ec2stepshell/utils/: ArgumentsHandler.py  CommandOutput.py
src/ec2stepshell/utils/terminal/: TerminalEmulator.py
src/ssm/: SsmWrapper.py
src/utils/: ArgumentsHandler.py  CommandOutput.py  constants.py
src/utils/terminal/: TerminalEmulator.py
